--- a/app/styles/themes/light.css
+++ b/app/styles/themes/light.css
@@ -8,7 +8,7 @@
   --color-primary-invert: #ffffff;
   --color-secondary: rgba(0, 0, 0, 0.8);
   --color-tertiary: rgba(0, 0, 0, 0.56);
-  --color-quaternary: rgba(0, 0, 0, 0.24);
+  --color-quaternary: rgba(0, 0, 0, 0.40);
 
   --color-card: rgba(0, 0, 0, 0.04);
   --color-card-border: rgba(0, 0, 0, 0.04);
